--- a/angular.json
+++ b/angular.json
@@ -58,7 +58,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angular-svg-sample:build"
+            "browserTarget": "angular-svg-sample:build",
+            "port": 1337
           },
           "configurations": {
             "production": {
